refactor: get dataplane groups for list of orgs (#15865)